# mom

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mom-core/: Cargo.toml
crates/mom-core/src/: lib.rs
crates/mom-embeddings/: Cargo.toml
crates/mom-embeddings/src/: lib.rs  mistral.rs  ollama.rs  openai.rs
crates/mom-service/: Cargo.toml
crates/mom-service/src/: lib.rs  main.rs
crates/mom-sources/: Cargo.toml
crates/mom-sources/src/: datafabric.rs  lib.rs  oxidizedgraph.rs  oxidizedrag.rs
crates/mom-store-surrealdb/: Cargo.toml
crates/mom-store-surrealdb/src/: hybrid.rs  lib.rs
docs/: DESIGN.md  PHASE_1_MVP.md  PHASE_2B_HYBRID_SEARCH.md  PHASE_2C_MULTI_SOURCE.md  PHASE_2_DESIGN.md  PHASE_2_PROGRESS.md  USER_STORIES.md
src/: error.rs  lib.rs  memory.rs  store.rs
